@@ -2,6 +2,7 @@
            xmlns:browser="http://namespaces.zope.org/browser"
            xmlns:five="http://namespaces.zope.org/five"
            xmlns:i18n="http://namespaces.zope.org/i18n"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
            i18n_domain="PloneMeeting">
 
   <!-- load "imio.pm.locales" first so translations are overrided -->
@@ -19,6 +20,7 @@
   <include package="imio.annex"/>
   <include package="imio.pm.ws"/>
   <include package="imio.dashboard"/>
+  <include zcml:condition="installed imio.zamqp.pm" package="imio.zamqp.pm" />
   <include package="plone.app.dexterity" />
   <include package="plone.directives.form" file="meta.zcml" />
   <include package="plone.directives.form" />
